# hicrm

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev-tools  LICENSE  MARKET_AGENT_IMPLEMENTATION_SUMMARY.md  Makefile  ORCHESTRATOR_COVERAGE_ENHANCEMENT_REPORT.md  RAG_SERVICE_IMPLEMENTATION_SUMMARY.md  README.md  SALES_AGENT_IMPLEMENTATION_SUMMARY.md  TASK_7_2_FINAL_REPORT.md  TASK_7_2_SUMMARY.md  TESTING_SUMMARY.md  UNICODE_TEST_SUITE_SUMMARY.md  UV_MIGRATION_GUIDE.md  VECTOR_DATABASE_IMPLEMENTATION.md  VECTOR_DATABASE_IMPLEMENTATION_SUMMARY.md  check_db_connection.py  check_import.py  db_connection_log.txt  debug_imports.py  demo_rag_service.py  docker-compose.dev.yml  docker-compose.vector.yml  docker-compose.yml  final_validation.py  fix_emoji_encoding.py  fix_encoding.py  fix_pydantic.py  pyproject.toml  pytest_error_log.txt  pytest_error_log_cmd.txt  pytest_unicode.ini  requirements.txt  run.py  setup.py  test_character_map_simple.py  test_import_only.py  (+18 more)
.github/workflows/: ci.yml  unicode_tests.yml
.kiro/specs/conversational-crm/: consistency-review.md  design.md  hicrm.md  requirements.md  tasks.md
.kiro/specs/customer-testing-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/knowledge-vector-testing/: design.md  requirements.md  tasks.md
.kiro/specs/unicode-encoding-fix/: design.md  requirements.md  tasks.md
docs/: QDRANT_SETUP.md  README.md  conversation_state_management.md  unicode_utils_examples.md  unicode_utils_guide.md  unicode_utils_limitations.md  unicode_utils_platform_guide.md  unicode_utils_quick_reference.md  vector_database_setup.md
examples/: EXAMPLES_SUMMARY.md  KNOWLEDGE_EXAMPLES_SUMMARY.md  RAG_EXAMPLES_SUMMARY.md  README.md  README_KNOWLEDGE_MANAGEMENT.md  README_QDRANT_TESTS.md  README_VECTOR_EXAMPLES.md  UUID_FIX_SUMMARY.md  behavior_analysis_example.py  chinese_search_examples.py  conversation_state_examples.py  embedding_service_examples.py  hybrid_search_examples.py  knowledge_management_examples.py  knowledge_model_tests.py  knowledge_simple_demo.py  llm_service_usage.py  multimodal_analysis_demo.py  nlu_service_usage.py  qdrant_collection_test.py  qdrant_connection_test.py  qdrant_quick_test.py  quick_start_multimodal.py  rag_service_examples.py  rag_simple_demo.py  run_examples.py  run_rag_examples.py  run_vector_examples.py  sales_conversation_demo.py  simple_conversation_demo.py  speech_analysis_example.py  test_grpc_fix.py  test_uuid_fix.py  validation_report.py  vector_database_examples.py
frontend/: package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: index.ts
scripts/: create_conversation_tables.sql  init.sql  migrate-to-uv.bat  migrate-to-uv.sh  setup-dev.bat  setup-dev.sh  setup.py  uv-commands.md  validate_config.py
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  communication.py  manager.py  orchestrator.py  state_manager.py
src/agents/professional/: __init__.py  crm_expert_agent.py  customer_success_agent.py  management_strategy_agent.py  market_agent.py  product_agent.py  sales_agent.py  sales_management_agent.py  system_management_agent.py
src/api/v1/: router.py  workflows.py
src/core/: auth.py  config.py  database.py  exceptions.py
src/models/: __init__.py  conversation.py  customer.py  knowledge.py  lead.py  multimodal.py  opportunity.py
src/schemas/: __init__.py  conversation.py  customer.py  lead.py  opportunity.py
src/services/: agent_conversation_integration.py  behavior_analysis_service.py  chinese_semantic_search.py  conversation_service.py  conversation_state_tracker.py  customer_service.py  elasticsearch_service.py  embedding_service.py  high_value_customer_service.py  hybrid_search_service.py  knowledge_service.py  lead_scoring_service.py  lead_service.py  llm_service.py  multimodal_fusion_service.py  nlu_service.py  opportunity_service.py  rag_service.py  speech_recognition_service.py  vector_service.py
src/utils/: __init__.py
src/utils/unicode_utils/: __init__.py  character_map.py  console_handler.py  safe_output.py
src/websocket/: enhanced_manager.py  manager.py  router.py
src/workflows/: customer_discovery.py  lead_management.py
tests/: __init__.py  conftest.py  conftest_unicode.py  run_unicode_tests.py  test_character_map.py  test_completed_tasks.py  test_config.py  test_console_handler.py  test_conversation_integration.py  test_conversation_state_management.py  test_knowledge_service.py  test_main.py  test_multimodal_analysis.py  test_opportunity_models.py  test_report.md  test_safe_output.py  test_unicode_backwards_compatibility.py  test_unicode_ci_cd.py  test_unicode_cross_platform.py  test_unicode_utils_integration.py  test_websocket_enhanced_manager.py  test_websocket_integration.py  test_websocket_router.py
tests/fixtures/: __init__.py  unicode_test_fixtures.py
tests/test_agents/: __init__.py  test_base_agent.py  test_communication.py  test_manager.py  test_orchestrator.py  test_orchestrator_async.py  test_orchestrator_comprehensive.py  test_state_manager.py
tests/test_api/: test_customers.py
tests/test_core/: __init__.py  test_database.py
tests/test_integration/: test_customer_workflow.py  test_llm_integration.py
tests/test_models/: __init__.py  test_customer.py  test_lead.py  test_opportunity.py
tests/test_performance/: test_load_testing.py  test_unicode_performance.py
tests/test_schemas/: test_lead.py  test_opportunity.py
tests/test_services/: __init__.py  test_agent_conversation_integration.py  test_chinese_semantic_search.py  test_customer_service.py  test_elasticsearch_service.py  test_embedding_service.py  test_hybrid_search_service.py  test_lead_scoring_service.py  test_lead_service.py  test_llm_service.py  test_nlu_service.py  test_nlu_service_simple.py  test_opportunity_service.py  test_rag_service.py  test_simple.py  test_vector_service.py
tests/test_websocket/: __init__.py  test_enhanced_manager.py  test_manager.py
tests/test_workflows/: test_customer_discovery.py  test_lead_management.py
(+20 files in other folders)
